# wikibase_rest_api

./: .gitignore  Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  README.md  analysis.py  analysis.sh  analysis.tab  rust-code-analysis.py
.github/workflows/: rust-code-analysis-check.yml  rust.yml  scorecard.yml
code-metrics/: lizard.out  rust-code-analysis.tab  tarpaulin-report.html  tarpaulin-report.json
examples/: Q42.rs  container.rs  create_item.rs
src/: aliases.rs  aliases_in_language.rs  aliases_patch.rs  bearer_token.rs  config.rs  data_type.rs  description.rs  descriptions.rs  descriptions_patch.rs  edit_metadata.rs  entity.rs  entity_container.rs  entity_id.rs  entity_patch.rs  error.rs  get_put_delete.rs  header_info.rs  item.rs  label.rs  labels.rs  labels_patch.rs  language_string.rs  language_strings.rs  language_strings_patch.rs  lib.rs  patch.rs  patch_entry.rs  prelude.rs  property.rs  property_value.rs  reference.rs  rest_api.rs  rest_api_builder.rs  revision_match.rs  search.rs  sitelink.rs  sitelinks.rs  sitelinks_patch.rs  statement.rs  statement_patch.rs  (+5 more)
test_data/: P214.json  Q255.json  Q42.json  openapi.json  test_search_response.json  test_statement_get.json  test_statement_put.json  test_statements_post.json
