[package]
name = "wikibase_rest_api"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wikibase", "REST"]
categories = ["api-bindings"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
async-trait = "0.1"
chrono = "0.4"
derivative = "2.2"
futures = "0.3"
json-patch = "1.2"
rayon = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6"
http = "1"
